@@ -30,6 +30,7 @@ Luke Howard retains copyright in all contributed code.
 	Daniel Hanks <hanksdc@plug.org>
 	Leif Hedstrom <leif@ogre.com>
 	Emile Heitor <eheitor@isdnet.net>
+	Tomas Janousek <tjanouse@redhat.com>
 	Geert Jansen <undisclosed>
 	Szymon Juraszczyk <szymon@ssk.pl>
 	Anselm Kruis <kruis@till-photonics.com>
